# rgode

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md
benches/: main.rs
benches/solvers/: adaptive_step.rs  fixed_step.rs  mod.rs  solutions.rs
benches/systems/: chaotic.rs  linear.rs  mod.rs  oscillators.rs
examples/01_exponential_growth/: main.rs
examples/02_harmonic_oscillator/: main.rs
examples/03_logistic_growth/: main.rs
examples/04_sir_model/: main.rs
examples/05_damped_pendulum/: main.rs
examples/06_integration/: main.rs
examples/07_cr3bp/: main.rs
examples/08_damped_oscillator/: main.rs
examples/09_matrix_system/: main.rs
examples/10_custom_solout/: main.rs
src/: interpolate.rs  lib.rs  prelude.rs  solution.rs  solver.rs  system.rs  traits.rs
src/ivp/: ivp.rs  mod.rs  solve_ivp.rs
src/solout/: crossing.rs  default.rs  dense.rs  even.rs  hyperplane.rs  mod.rs  solout.rs  t_eval.rs
src/solvers/: mod.rs  utils.rs
src/solvers/adams/: apcf4.rs  apcv4.rs  mod.rs
src/solvers/runge_kutta/: adaptive_step.rs  dop853.rs  fixed_step.rs  macros.rs  mod.rs
tests/python_comparison/: plots.py  solve_ivp.py
tests/suite/: accuracy.rs  errors.rs  interpolation.rs  main.rs  statistics.rs  systems.rs
